After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708826 - empathy-debugger couldn't reduce size along the vertical
empathy-debugger couldn't reduce size along the vertical
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkScrolledWindow
3.9.x
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2013-09-26 11:01 UTC by Igor Gnatenko
Modified: 2013-09-26 14:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-EmpathyDebugWindow-set-request-widget-size.patch (1.08 KB, patch)
2013-09-26 13:36 UTC, Igor Gnatenko
none Details | Review
0001-EmpathyDebugWindow-set-request-widget-size.patch (1.11 KB, patch)
2013-09-26 14:08 UTC, Igor Gnatenko
none Details | Review
0001-EmpathyDebugWindow-set-request-widget-size-drop-set-.patch (1.23 KB, patch)
2013-09-26 14:53 UTC, Igor Gnatenko
none Details | Review

Description Igor Gnatenko 2013-09-26 11:01:37 UTC
For horizontally debug window could be resized.
Comment 1 Igor Gnatenko 2013-09-26 12:14:35 UTC
More accurately: Couldn't reduce size at vertical
Comment 2 Igor Gnatenko 2013-09-26 12:28:20 UTC
I think this caused by:
https://git.gnome.org/browse/empathy/tree/src/empathy-debug-window.c#n2081
gtk_scrolled_window_set_policy (
  GTK_SCROLLED_WINDOW (self->priv->scrolled_win),
  GTK_POLICY_AUTOMATIC, GTK_POLICY_AUTOMATIC);
Comment 3 Igor Gnatenko 2013-09-26 13:36:59 UTC
Created attachment 255833 [details] [review]
0001-EmpathyDebugWindow-set-request-widget-size.patch

I've not tested this patch..
gtk_widget_set_size_request (GTK_WINDOW (object), 800, 400); fixes this bug, but causes messages alike:
warning: passing argument 1 of 'gtk_widget_set_size_request' from incompatible pointer type
Comment 4 Igor Gnatenko 2013-09-26 14:08:56 UTC
Created attachment 255838 [details] [review]
0001-EmpathyDebugWindow-set-request-widget-size.patch

v2:
Fixed incompatible pointer type
Comment 5 Igor Gnatenko 2013-09-26 14:53:17 UTC
Created attachment 255842 [details] [review]
0001-EmpathyDebugWindow-set-request-widget-size-drop-set-.patch

v3:
Drop set default size
Optimize minimal size
Comment 6 Xavier Claessens 2013-09-26 14:57:47 UTC
Looks good, thanks. Merged into master.