EmpathyDebugWindow: set request widget size, drop set default size

Empathy debug window opens w/ weird size. This caused by scrolled
window. In official documentation of gtk+ I look that uses:
gtk_widget_set_size_request (window, 300, 300);
And it's work!

Set default size isn't needed.

Reference: https://bugzilla.gnome.org/show_bug.cgi?id=708826

Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>